--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -7,7 +7,7 @@
 .header { 
     width: 400px;
     height: 100px;
-    background-color: rgb(7, 7, 168);
+    background-color:#141f40;
 }
 
 /*.main {
@@ -20,19 +20,19 @@
 .left{
     width: 150px;
     height: 250px;
-    background-color:rgb(11, 231, 121) ;
+    background-color:#80bfa8 ;
     float: left;
 }
 
 .light{
     width: 250px;
     height: 250px;
-    background-color:rgb(163, 7, 7);
+    background-color:#8c2727;
     float: left;
 }
 
 .footer{
     width: 400px;
     height: 100px;
-    background-color: rgb(230, 177, 99);
+    background-color:#d98d30;
 }
